layered-contracts/src/tests/snapshots/layered_contracts__tests__contract_clause__clause_from_pronoun_obligor.snap
---
source: layered-contracts/src/tests/contract_clause.rs
expression: "test_clauses(r#\"ABC Corp (the \"Company\") exists. It shall deliver replacement parts.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     exists  .     It     shall     deliver     replacement     parts  .
                 ╰─────────────────────────╯Scored(PronounChain { chain_id: 1, canonical_name: "Company", is_defined_term: true, mentions: [ChainMention { text: "Company", mention_type: Definition, confidence: 0.9, token_offset: 4 }, ChainMention { text: "It", mention_type: Pronoun, confidence: 0.77, token_offset: 15 }], has_verified_mention: false }, conf: 0.90)
                                                                      ╰───╯Scored(ObligationPhrase { obligor: PronounRef { pronoun: "It", resolved_to: "Company", is_defined_term: true, confidence: 0.5700000000000001 }, obligation_type: Duty, action: "deliver replacement parts", conditions: [] }, conf: 0.90)
                                                                      ╰───╯Scored(ContractClause { clause_id: 17, source_offset: 17, obligor: ClauseParty { display_text: "Company", chain_id: Some(1), has_verified_chain: false }, duty: ClauseDuty { obligation_type: Duty, action: "deliver replacement parts" }, conditions: [] }, conf: 0.90)
