layered-contracts/src/tests/snapshots/layered_contracts__tests__contract_clause__clause_prohibition_shall_not.snap
---
source: layered-contracts/src/tests/contract_clause.rs
expression: "test_clauses(r#\"ABC Corp (the \"Company\") shall not disclose Confidential Information.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     shall     not     disclose     Confidential     Information  .
                                                 ╰───────────╯Scored(ObligationPhrase { obligor: NounPhrase { text: "Company" }, obligation_type: Prohibition, action: "disclose Confidential Information", conditions: [] }, conf: 0.75)
                                                 ╰───────────╯Scored(ContractClause { clause_id: 12, source_offset: 12, obligor: ClauseParty { display_text: "Company", chain_id: None, has_verified_chain: false, confidence: 0.5, needs_review: true, review_reason: Some("Not linked to defined term") }, duty: ClauseDuty { obligation_type: Prohibition, action: "disclose Confidential Information" }, conditions: [] }, conf: 0.75)
