layered-contracts/src/tests/snapshots/layered_contracts__tests__contract_clause__clause_verified_chain_bonus.snap
---
source: layered-contracts/src/tests/contract_clause.rs
expression: "test_clauses_with_verified_chain(r#\"ABC Corp (the \"Company\") exists. It shall deliver replacement parts.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     exists  .     It     shall     deliver     replacement     parts  .
                                                                      ╰───╯Scored(ObligationPhrase { obligor: PronounRef { pronoun: "It", resolved_to: "Company", is_defined_term: true, confidence: 0.5700000000000001 }, obligation_type: Duty, action: "deliver replacement parts", conditions: [] }, conf: 0.90)
                                                                      ╰───╯Scored(ContractClause { clause_id: 17, source_offset: 17, obligor: ClauseParty { display_text: "Company", chain_id: Some(1), has_verified_chain: true }, duty: ClauseDuty { obligation_type: Duty, action: "deliver replacement parts" }, conditions: [] }, conf: 0.95)
