layered-contracts/src/tests/snapshots/layered_contracts__tests__contract_clause__clause_with_known_condition_entity.snap
---
source: layered-contracts/src/tests/contract_clause.rs
expression: "test_clauses(r#\"ABC Corp (the \"Company\") shall deliver goods if the Company receives payment.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     shall     deliver     goods     if     the     Company     receives     payment  .
                 ╰─────────────────────────╯Scored(PronounChain { chain_id: 1, canonical_name: "Company", is_defined_term: true, mentions: [ChainMention { text: "Company", mention_type: Definition, confidence: 0.9, token_offset: 4 }, ChainMention { text: "Company", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 22 }], has_verified_mention: false }, conf: 0.95)
                                                 ╰───╯Scored(ObligationPhrase { obligor: NounPhrase { text: "Company" }, obligation_type: Duty, action: "deliver goods", conditions: [ConditionRef { condition_type: If, text_preview: "the Company receives payment" }] }, conf: 0.75)
                                                 ╰───╯Scored(ContractClause { clause_id: 12, source_offset: 12, obligor: ClauseParty { display_text: "Company", chain_id: Some(1), has_verified_chain: false }, duty: ClauseDuty { obligation_type: Duty, action: "deliver goods" }, conditions: [ClauseCondition { condition_type: If, text: "the Company receives payment", mentions_unknown_entity: false }] }, conf: 0.75)
